[package]
name = "gameboy_emulator"
version = "0.1.0"
authors = ["Jonah Ringdahl"]
edition = "2024"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"

[dependencies]
bevy = { version = "0.15.3", features = ["dynamic_linking"] }
log = { version = "*", features = ["max_level_debug","release_max_level_warn"]}
rand = "0.9.0"

