[package]
name = "gameboy_emulator"
version = "0.1.0"
authors = ["Jonah Ringdahl"]
edition = "2024"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
log = { version = "*", features = ["max_level_debug","release_max_level_warn"]}
raylib = { git = "https://github.com/raylib-rs/raylib-rs.git" }
rand = "0.9.0"
rayon = "1.10.0"

